(FPGA) LCMXO2-400HC (STEP-MXO2) Added schematic images and used full title for all of pages.

--- a/mcu.htm
+++ b/mcu.htm
@@ -75,7 +75,7 @@
 <br><br>
 <p>
   <a href="#hw"><img src="img/photos/hw.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="硬體"/></a>
-  <a href="#mxo2"><img src="img/photos/mxo2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) LCMXO2-400HC"/></a>
+  <a href="#mxo2"><img src="img/photos/mxo2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) LCMXO2-400HC (小脚丫STEP-MXO2第二代)"/></a>
   <a href="#max10"><img src="img/photos/max10.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) 10M02SCM"/></a>
   <a href="#lichee-tang"><img src="img/photos/lichee-tang.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EG4S20"/></a>
   <a href="#epm240t100c5n"><img src="img/photos/epm240t100c5n.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EPM240T100C5N"/></a>
@@ -181,12 +181,16 @@ LCD Timing(VBPD、VFBD、VSPW、HBPD、HFPD、HSPW)</a><br>
 
 <div id="mxo2"></div>
 <h3><img src="img/photos/mxo2.jpg" class="floatLeft"/>
-<b>(FPGA)</b> LCMXO2-400HC</h3>
+<b>(FPGA)</b> LCMXO2-400HC (小脚丫STEP-MXO2第二代)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
 <a href="mcu/lcmxo2-400hc/pinout.htm">
 腳位</a><br>
+
+&lowast;
+<a href="mcu/lcmxo2-400hc/sch.htm">
+電路圖</a><br>
 
 &lowast;
 <a href="mcu/lcmxo2-400hc/setup.htm">
