--- a/mcu/lcmxo2-400hc/vhdl_button.htm
+++ b/mcu/lcmxo2-400hc/vhdl_button.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>LCMXO2-400HC &gt;&gt; VHDL</h3>
+<h3>(FPGA) LCMXO2-400HC (小脚丫STEP-MXO2第二代) &gt;&gt; VHDL</h3>
 <p><b>Button</b></p>
 <hr size="1">
 <p>
