--- a/mcu/lcmxo2-400hc/sch.htm
+++ b/mcu/lcmxo2-400hc/sch.htm
@@ -29,7 +29,7 @@
   <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
   <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushPas.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -44,78 +44,16 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>(FPGA) LCMXO2-400HC (小脚丫STEP-MXO2第二代) &gt;&gt; VHDL</h3>
-<p><b>LED</b></p>
+<h3>(FPGA) LCMXO2-400HC (小脚丫STEP-MXO2第二代)</h3>
+<p><b>電路圖</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://www.stepfpga.com/doc/step-mxo2%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B">basic</a><br><br>
+1. <a href="https://www.stepfpga.com/doc/step-mxo2%E7%AC%AC%E4%BA%8C%E4%BB%A3">home</a><br><br>
 
-新增專案<br>
-<img src="vhdl_led/1.jpg" class="maxSize"><br><br>
-
-專案名稱<br>
-<img src="vhdl_led/2.jpg" class="maxSize"><br><br>
-
-Next<br>
-<img src="vhdl_led/3.jpg" class="maxSize"><br><br>
-
-LCMX02-4000HC、CSGBA132<br>
-<img src="vhdl_led/4.jpg" class="maxSize"><br><br>
-
-Next<br>
-<img src="vhdl_led/5.jpg" class="maxSize"><br><br>
-
-專案建立完成<br>
-<img src="vhdl_led/6.jpg" class="maxSize"><br><br>
-
-接著新增VHDL檔案<br>
-<img src="vhdl_led/7.jpg" class="maxSize"><br>
-<img src="vhdl_led/8.jpg" class="maxSize"><br><br>
-
-程式如下：
-</p>
-<pre class="brush: pas">
-module main(btn, led);
-
-input btn;
-output led;
-assign led = btn;
-
-endmodule
-</pre>
-<p>
-btn輸入就當做led輸出<br><br>
-
-用滑鼠點擊Synthesize Design<br>
-<img src="vhdl_led/20.jpg" class="maxSize"><br><br>
-
-設定腳位<br>
-<img src="vhdl_led/11.jpg" class="maxSize"><br><br>
-
-btn(L14)、led(N13)<br>
-<img src="vhdl_led/12.jpg" class="maxSize"><br><br>
-
-在左邊的Process Tab裡面，把所有項目句選<br>
-<img src="vhdl_led/9.jpg" class="maxSize"><br><br>
-
-使用滑鼠雙擊<b>Export Files</b><br>
-<img src="vhdl_led/10.jpg" class="maxSize"><br><br>
-
-接著插入FPGA開發板並且確認電腦可以正確識別，如錯誤，記得安裝驅動程式<br>
-<img src="vhdl_led/15.jpg" class="maxSize"><br><br>
-
-開啟燒錄頁面<br>
-<img src="vhdl_led/13.jpg" class="maxSize"><br>
-<img src="vhdl_led/14.jpg" class="maxSize"><br>
-<img src="vhdl_led/16.jpg" class="maxSize"><br><br>
-
-燒錄<br>
-<img src="vhdl_led/17.jpg" class="maxSize"><br><br>
-
-完成<br>
-<img src="vhdl_led/18.jpg" class="maxSize"><br>
-<img src="vhdl_led/19.jpg" class="maxSize">
+如下：<br>
+<img src="sch/1.jpg" class="maxSize"><br>
+<img src="sch/2.jpg" class="maxSize">
 </p>
 
 <p>
