--- a/mcu/10m02scm/fix_driversign.htm
+++ b/mcu/10m02scm/fix_driversign.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>10M02SCM</h3>
+<h3>(FPGA) 10M02SCM (小脚丫STEP-MAX10)</h3>
 <p><b>解決USB-Blaster無法安裝驅動程式的問題(Windows x64)</b></p>
 <hr size="1">
 <p>
