(FPGA) 10M02SCM (STEP-MAX10) Added schematic images.

--- a/mcu.htm
+++ b/mcu.htm
@@ -225,6 +225,10 @@ LCD Timing(VBPD、VFBD、VSPW、HBPD、HFPD、HSPW)</a><br>
 腳位</a><br>
 
 &lowast;
+<a href="mcu/10m02scm/sch.htm">
+電路圖</a><br>
+
+&lowast;
 <a href="mcu/10m02scm/setup.htm">
 安裝Quartus</a><br>
 
