(FPGA) EG4S20 (Lichee Tang Premier) Used full title.

--- a/mcu.htm
+++ b/mcu.htm
@@ -77,7 +77,7 @@
   <a href="#hw"><img src="img/photos/hw.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="硬體"/></a>
   <a href="#mxo2"><img src="img/photos/mxo2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) LCMXO2-400HC (小脚丫STEP-MXO2第二代)"/></a>
   <a href="#max10"><img src="img/photos/max10.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) 10M02SCM (小脚丫STEP-MAX10)"/></a>
-  <a href="#lichee-tang"><img src="img/photos/lichee-tang.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EG4S20"/></a>
+  <a href="#lichee-tang"><img src="img/photos/lichee-tang.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EG4S20 (Lichee Tang Premier)"/></a>
   <a href="#epm240t100c5n"><img src="img/photos/epm240t100c5n.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EPM240T100C5N"/></a>
   <a href="#ep4ce6e22c8n"><img src="img/photos/ep4ce6e22c8n.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EP4CE6E22C8N"/></a>
   <a href="#epm240t100c5n-1"><img src="img/photos/epm240t100c5n-1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EPM240T100C5N"/></a>
@@ -270,7 +270,7 @@ Delta cycle</a><br>
 
 <div id="lichee-tang"></div>
 <h3><img src="img/photos/lichee-tang.jpg" class="floatLeft"/>
-<b>(FPGA)</b> EG4S20</h3>
+<b>(FPGA)</b> EG4S20 (Lichee Tang Premier)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
