--- a/mcu/eg4s20/cpp_led.htm
+++ b/mcu/eg4s20/cpp_led.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>EG4S20 &gt;&gt; Verilog</h3>
+<h3>(FPGA) EG4S20 (Lichee Tang Premier) &gt;&gt; Verilog</h3>
 <p><b>LED</b></p>
 <hr size="1">
 <p>
