--- a/mcu/eg4s20/e203.htm
+++ b/mcu/eg4s20/e203.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>EG4S20</h3>
+<h3>(FPGA) EG4S20 (Lichee Tang Premier)</h3>
 <p><b>編譯燒錄Hummingbird E203(蜂鳥E203)</b></p>
 <hr size="1">
 <p>
