(FPGA) EG4S20 (Lichee Tang Premier) Added schematic images.

--- a/mcu.htm
+++ b/mcu.htm
@@ -278,6 +278,10 @@ Delta cycle</a><br>
 腳位</a><br>
 
 &lowast;
+<a href="mcu/eg4s20/sch.htm">
+電路圖</a><br>
+
+&lowast;
 <a href="mcu/eg4s20/patch_license.htm">
 Patch Anlogic TD License</a><br>
 
