(FPGA) GW1N-LV1QN48C6/I5 (Lichee Tang Nano) Added pin image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -78,6 +78,7 @@
   <a href="#mxo2"><img src="img/photos/mxo2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) LCMXO2-400HC (小脚丫STEP-MXO2第二代)"/></a>
   <a href="#max10"><img src="img/photos/max10.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) 10M02SCM (小脚丫STEP-MAX10)"/></a>
   <a href="#lichee-tang"><img src="img/photos/lichee-tang.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EG4S20 (Lichee Tang Premier)"/></a>
+  <a href="#lichee-tang-nano"><img src="img/photos/lichee-tang-nano.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) GW1N-LV1QN48C6/I5 (Lichee Tang Nano)"/></a>
   <a href="#epm240t100c5n"><img src="img/photos/epm240t100c5n.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EPM240T100C5N"/></a>
   <a href="#ep4ce6e22c8n"><img src="img/photos/ep4ce6e22c8n.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EP4CE6E22C8N"/></a>
   <a href="#epm240t100c5n-1"><img src="img/photos/epm240t100c5n-1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EPM240T100C5N"/></a>
@@ -315,6 +316,16 @@ Patch Anlogic TD License</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/eg4s20/cpp_parallel.htm">
   Parallel</a><br>
+<br><br><br><br>
+
+<div id="lichee-tang-nano"></div>
+<h3><img src="img/photos/lichee-tang-nano.jpg" class="floatLeft"/>
+<b>(FPGA)</b> GW1N-LV1QN48C6/I5 (Lichee Tang Nano)</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="mcu/gw1n-lv1qn48c6/pin.htm">
+接腳</a><br>
 <br><br><br><br>
 
 <div id="epm240t100c5n"></div>
