(FPGA) GW1N-LV1QN48C6/I5 (Lichee Tang Nano 4K) Updated.

--- a/mcu/gw1n-lv1qn48c6/pin.htm
+++ b/mcu/gw1n-lv1qn48c6/pin.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>(FPGA) GW1N-LV1QN48C6/I5 (Lichee Tang Nano)</h3>
+<h3>(FPGA) GW1N-LV1QN48C6/I5 (Lichee Tang Nano 4K)</h3>
 <p><b>接腳</b></p>
 <hr size="1">
 <p>
