GNU An example to show how to clone new namespace and then set process capability in C/C++.

--- a/program.htm
+++ b/program.htm
@@ -188,6 +188,10 @@ GNU</h3>
   <a href="program/gnu/cpp_shm.htm">
   shmget、shmat、shmdt、shmctl</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="program/gnu/cpp_setcap_clone.htm">
+  set process capability in container (clone)</a><br>
+
 &oplus;
 <b>Assembly (ARM)</b><br>
   
