--- a/program/gnu/cpp_setcap_clone.htm
+++ b/program/gnu/cpp_setcap_clone.htm
@@ -80,6 +80,7 @@ static int child(void *argv)
     cap_set_flag(caps, CAP_PERMITTED, cap_num, cap_list, CAP_SET);
     cap_set_proc(caps);
     cap_free(caps);
+    return 0;
 }
 
 int main(int argc, char **argv)
