--- a/umpc.htm
+++ b/umpc.htm
@@ -926,6 +926,10 @@ SHARP Brain PW-AC110</h3>
 &lowast;
 <a href="umpc/pw-ac110/teardown.htm">
 拆機</a><br>
+
+&lowast;
+<a href="umpc/pw-ac110/lcd.htm">
+LCD腳位</a><br>
 <br><br><br><br>
 
 <div id="pw-ac880"></div>
