GNU An example to show how to program rapidjson in C/C++.

--- a/program.htm
+++ b/program.htm
@@ -133,6 +133,10 @@ GNU</h3>
   -rdynamic</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/gnu/cpp_rapidjson.htm">
+  rapidjson</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/gnu/cpp_backtrace.htm">
   backtrace</a><br>
 
