Nintendo DS Lite Reconstruction.

--- a/emu.htm
+++ b/emu.htm
@@ -396,12 +396,44 @@ build grit</a><br>
 build libnds</a><br>
 
 &lowast;
+<a href="emu/ndsl/build_libfat.htm">
+build libfat</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_dswifi.htm">
+build dswifi</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_mmutil.htm">
+build mmutil</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_maxmod.htm">
+build maxmod</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_ndstool.htm">
+build ndstool</a><br>
+
+&lowast;
 <a href="emu/ndsl/build_devkitpro.htm">
 build devkitpro</a><br>
 
 &lowast;
+<a href="emu/ndsl/build_nds-examples.htm">
+build nds-examples</a><br>
+
+&lowast;
 <a href="emu/ndsl/build_general-tools.htm">
 build general-tools</a><br>
+
+&lowast;
+<a href="emu/ndsl/fix_rules.htm">
+解決"failed to open input file: /opt/devkitpro//libnds/default.elf"問題</a><br>
+
+&lowast;
+<a href="emu/ndsl/fix_syscall.htm">
+解決"initSystem.c: error: __SYSCALL declared as function returning a function"問題</a><br>
 <br><br><br><br>
 
 <div id="nes"></div>
