--- a/emu/ndsl/build_devkitpro.htm
+++ b/emu/ndsl/build_devkitpro.htm
@@ -59,6 +59,8 @@ $ git clone https://github.com/devkitPro/buildscripts devkitpro_build
 $ cd devkitpro_build
 $ wget https://wii.leseratte10.de/devkitPro/devkitARM/devkitarm-rules/devkitarm-rules-1.2.1.tar.gz
 $ wget https://wii.leseratte10.de/devkitPro/devkitARM/devkitarm-rules/devkitarm-crtls-1.1.1.tar.gz
+$ wget https://ftp.gnu.org/gnu/binutils/binutils-2.39.tar.xz
+$ wget https://ftp.gnu.org/gnu/gcc/gcc-12.2.0/gcc-12.2.0.tar.xz
 $ ./build-devkit.sh
   Please select the toolchain you require
 
@@ -84,21 +86,8 @@ $ ./build-devkit.sh
 
   note: Add the following to your environment;
 
-    DEVKITPRO=/opt
-    DEVKITARM=/opt/devkitARM
-
-  add /opt/tools/bin to your PATH
-
-  Would you like to delete the build folders and patched sources? [Y/n]
-
-  Removing patched sources and build directories
-
-  note: Add the following to your environment;
-
     DEVKITPRO=/opt/devkitpro
     DEVKITARM=/opt/devkitpro/devkitARM
-
-  add /opt/devkitpro/tools/bin to your PATH
 
 $ /opt/devkitpro/devkitARM/bin/arm-none-eabi-gcc -v
   gcc version 11.1.0 (devkitARM release 56)
