--- a/emu/ndsl/build_libfat.htm
+++ b/emu/ndsl/build_libfat.htm
@@ -46,23 +46,37 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo DS Lite</h3>
-<p><b>general-tools</b></p>
+<p><b>build libfat</b></p>
 <hr size="1">
 <p>
 步驟如下：
 </p>
 <pre>
+$ export DEVKITPRO=/opt/devkitpro/
+$ export DEVKITARM=/opt/devkitpro/devkitARM/
+
 $ cd
-$ git clone https://github.com/devkitPro/general-tools
-$ cd general-tools
-$ ./autogen.sh
-$ ./configure
+$ git clone https://github.com/devkitPro/libfat
+$ cd libfat
 $ make
-$ sudo make install
-</pre>
-<p>
-P.S. 假如沒有編譯安裝general-tools，之後編譯程式時，將會遇到<b>/bin/sh: bin2s: command not found</b>錯誤
-</p>
+    libfat/gba/../include/fat.h:56:14: fatal error: disc_io.h: No such file or directory
+        56 | #    include &lt;disc_io.h&gt;
+
+$ vim Makefile +19
+    release: nds-release #gba-release cube-release wii-release gp2x-release
+
+$ make
+$ make install
+    libfat/gba/../include/fat.h:56:14: fatal error: disc_io.h: No such file or directory
+        56 | #    include &lt;disc_io.h&gt;
+
+$ vim Makefile
+    71  dist-bin: nds-dist-bin #gba-dist-bin ogc-dist-bin gp2x-dist-bin
+    93  dist: dist-bin #dist-src
+    110 install: nds-install #gba-install ogc-install gp2x-install
+
+$ make install
+</pre><br>
 
 <p>
 <br><a href="../../emu.htm">返回上一頁</a>
