--- a/emu/ndsl/build_libnds.htm
+++ b/emu/ndsl/build_libnds.htm
@@ -52,10 +52,14 @@
 步驟如下：
 </p>
 <pre>
+$ export DEVKITPRO=/opt/devkitpro/
+$ export DEVKITARM=/opt/devkitpro/devkitARM/
+
 $ cd
 $ git clone https://github.com/devkitPro/libnds
 $ cd libnds
 $ make
+$ make install
 </pre><br>
 
 <p>
