--- a/emu/ndsl/build_nds-examples.htm
+++ b/emu/ndsl/build_nds-examples.htm
@@ -46,22 +46,23 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo DS Lite</h3>
-<p><b>general-tools</b></p>
+<p><b>build nds-examples</b></p>
 <hr size="1">
 <p>
 步驟如下：
 </p>
 <pre>
+$ export DEVKITPRO=/opt/devkitpro/
+$ export DEVKITARM=/opt/devkitpro/devkitARM/
+
 $ cd
-$ git clone https://github.com/devkitPro/general-tools
-$ cd general-tools
-$ ./autogen.sh
-$ ./configure
+$ git clone https://github.com/devkitPro/nds-examples
+$ cd nds-examples
+$ mv filesystem/nitrofs /tmp
 $ make
-$ sudo make install
 </pre>
 <p>
-P.S. 假如沒有編譯安裝general-tools，之後編譯程式時，將會遇到<b>/bin/sh: bin2s: command not found</b>錯誤
+P.S. 編譯nds-examples前，必須先確保相關Library都已經編譯安裝完成
 </p>
 
 <p>
