--- a/emu/ndsl/build_ndstool.htm
+++ b/emu/ndsl/build_ndstool.htm
@@ -46,23 +46,20 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo DS Lite</h3>
-<p><b>general-tools</b></p>
+<p><b>build ndstool</b></p>
 <hr size="1">
 <p>
 步驟如下：
 </p>
 <pre>
 $ cd
-$ git clone https://github.com/devkitPro/general-tools
-$ cd general-tools
+$ git clone https://github.com/devkitPro/ndstool
+$ cd ndstool
 $ ./autogen.sh
 $ ./configure
 $ make
 $ sudo make install
-</pre>
-<p>
-P.S. 假如沒有編譯安裝general-tools，之後編譯程式時，將會遇到<b>/bin/sh: bin2s: command not found</b>錯誤
-</p>
+</pre><br>
 
 <p>
 <br><a href="../../emu.htm">返回上一頁</a>
