F(x)tec Pro1 X How to install the latest termux-app under android 11.

--- a/phone.htm
+++ b/phone.htm
@@ -1992,6 +1992,10 @@ F(x)tec Pro1 X</h3>
   <a href="phone/pro1x/fix_sensor.htm">
   解決畫面無法旋轉的問題</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="phone/pro1x/fix_termux.htm">
+  解決新版Termux App無法安裝的問題</a><br>
+
   &emsp;&emsp;&oplus;
   XServer XSDL<br>
   
