Docker Added more information.

--- a/system/docker/mount.htm
+++ b/system/docker/mount.htm
@@ -48,13 +48,16 @@
 <p><b>如何掛載資料夾</b></p>
 <hr size="1">
 <p>
-如下：
+如下(host:/tmp, docker:/test)：
 </p>
 <pre>
 $ sudo docker run -t -i -v /tmp:/test ubuntu /bin/bash
 root@c00b7e989199:/# ls /
     bin  boot  dev  etc  home  lib  lib32  lib64  libx32  media  mnt  opt  proc  root  run  sbin  srv  sys  test  tmp  usr  var
-</pre><br>
+</pre>
+<p>
+P.S. 記得使用完整路徑
+</p>
 
 <p>
 <br><a href="../../system.htm">返回上一頁</a>
