Nintendo DS Lite Added more information.

--- a/emu/ndsl/build_devkitpro.htm
+++ b/emu/ndsl/build_devkitpro.htm
@@ -70,7 +70,7 @@ $ ./build-devkit.sh
   1
 
   Please enter the directory where you would like 'devkitARM' to be installed:
-  for mingw/msys you must use <drive>:/<install path> or you will have include path problems
+  for mingw/msys you must use &lt;drive&gt;:/&lt;install path&gt; or you will have include path problems
   this is the top level directory for devkitpro, i.e. e:/devkitPro
   /opt/devkitpro
 
@@ -91,7 +91,10 @@ $ ./build-devkit.sh
 
 $ /opt/devkitpro/devkitARM/bin/arm-none-eabi-gcc -v
   gcc version 11.1.0 (devkitARM release 56)
-</pre><br>
+</pre>
+<p>
+P.S. 由於目前手動編譯出來的toolchain都無法編譯出可以用的NDS檔案，因此，建議使用司徒從docker提取的檔案(<a href="https://github.com/steward-fu/ndsl/releases/download/v1.0/devkitpro_docker_elf.tar.gz">devkitpro_docker_elf.tar.gz</a>)，Debian 10 x64可以直接使用
+</p>
 
 <p>
 <br><a href="../../emu.htm">返回上一頁</a>
