Nintendo DS Lite How to prepare developing environment.

--- a/emu.htm
+++ b/emu.htm
@@ -434,6 +434,13 @@ build general-tools</a><br>
 &lowast;
 <a href="emu/ndsl/fix_syscall.htm">
 解決"initSystem.c: error: __SYSCALL declared as function returning a function"問題</a><br>
+
+&oplus;
+<b>C/C++</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="emu/ndsl/cpp_setup.htm">
+  開發環境</a><br>
 <br><br><br><br>
 
 <div id="nes"></div>
