PSP Go Reconstruction.

--- a/emu.htm
+++ b/emu.htm
@@ -78,6 +78,7 @@
   <a href="#gbc"><img src="img/photos/gbc.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Game Boy Color"/></a>
   <a href="#gba"><img src="img/photos/gba.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Game Boy Advance"/></a>
   <a href="#ndsl"><img src="img/photos/ndsl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo DS Lite"/></a>
+  <a href="#pspgo"><img src="img/photos/pspgo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PSP Go"/></a>
   <a href="#nes"><img src="img/photos/nes.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo Entertainment System"/></a>
   <a href="#snes"><img src="img/photos/snes.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Super Nintendo Entertainment System"/></a>
   <a href="#smd"><img src="img/photos/smd.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Sega Genesis"/></a>
@@ -441,6 +442,16 @@ build general-tools</a><br>
   &emsp;&emsp;&lowast;
   <a href="emu/ndsl/cpp_setup.htm">
   開發環境</a><br>
+<br><br><br><br>
+
+<div id="pspgo"></div>
+<h3><img src="img/photos/pspgo.jpg" class="floatLeft"/>
+PSP Go</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="emu/pspgo/build_toolchain.htm">
+build psptoolchain</a><br>
 <br><br><br><br>
 
 <div id="nes"></div>
