PSP Go How to prepare developing environment.

--- a/emu.htm
+++ b/emu.htm
@@ -452,6 +452,13 @@ PSP Go</h3>
 &lowast;
 <a href="emu/pspgo/build_toolchain.htm">
 build psptoolchain</a><br>
+
+&oplus;
+<b>C/C++</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="emu/pspgo/cpp_setup.htm">
+  開發環境</a><br>
 <br><br><br><br>
 
 <div id="nes"></div>
