PSP Go hello, world! example in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -459,6 +459,10 @@ build psptoolchain</a><br>
   &emsp;&emsp;&lowast;
   <a href="emu/pspgo/cpp_setup.htm">
   開發環境</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/pspgo/cpp_hello.htm">
+  hello, world!</a><br>
 <br><br><br><br>
 
 <div id="nes"></div>
