--- a/emu.htm
+++ b/emu.htm
@@ -78,6 +78,7 @@
   <a href="#gbc"><img src="img/photos/gbc.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Game Boy Color"/></a>
   <a href="#gba"><img src="img/photos/gba.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Game Boy Advance"/></a>
   <a href="#ndsl"><img src="img/photos/ndsl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo DS Lite"/></a>
+  <a href="#3ds"><img src="img/photos/3ds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo 3DS"/></a>
   <a href="#pspgo"><img src="img/photos/pspgo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PSP Go"/></a>
   <a href="#nes"><img src="img/photos/nes.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo Entertainment System"/></a>
   <a href="#snes"><img src="img/photos/snes.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Super Nintendo Entertainment System"/></a>
@@ -441,6 +442,19 @@ build general-tools</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="emu/ndsl/cpp_setup.htm">
+  開發環境</a><br>
+<br><br><br><br>
+
+<div id="3ds"></div>
+<h3><img src="img/photos/3ds.jpg" class="floatLeft"/>
+Nintendo 3DS</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>C/C++</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_setup.htm">
   開發環境</a><br>
 <br><br><br><br>
 
