PSP Go Added more information.

--- a/emu/pspgo/cpp_hello.htm
+++ b/emu/pspgo/cpp_hello.htm
@@ -106,6 +106,8 @@ include $(PSPSDK)/lib/build.mak
 編譯、執行
 </p>
 <pre>
+$ export PSPDEV=/opt/pspdev
+$ export PATH=$PATH:$PSPDEV/bin
 $ make
     psp-gcc -I. -I/opt/pspdev/psp/sdk/include  -D_PSP_FW_VERSION=150   -c -o main.o main.c
     psp-gcc -I. -I/opt/pspdev/psp/sdk/include  -D_PSP_FW_VERSION=150  -L. -L/opt/pspdev/psp/sdk/lib   main.o  -lpspdebug -lpspdisplay -lpspge -lpspctrl -lpspsdk -lc -lpspnet -lpspnet_inet -lpspnet_apctl -lpspnet_resolver -lpsputility -lpspuser -lpspkernel -o hello.elf
