Nintendo DS Lite Added more information.

--- a/emu/ndsl/cpp_setup.htm
+++ b/emu/ndsl/cpp_setup.htm
@@ -77,7 +77,7 @@ $ sudo docker build -t nds-env .
     Successfully built 8da2a32afc12
     Successfully tagged nds-env:latest
 
-$ sudo docker run --rm -it -v /xxx:/myfolder nds-env /bin/bash
+$ sudo docker run --rm -it -v $(pwd):/source nds-env /bin/bash
 
 root@b0c0692e89e1:/source# /opt/devkitpro/devkitARM/bin/arm-none-eabi-gcc -v
     Using built-in specs.
@@ -90,7 +90,7 @@ root@b0c0692e89e1:/source# /opt/devkitpro/devkitARM/bin/arm-none-eabi-gcc -v
     gcc version 12.2.0 (devkitARM release 59)
 </pre>
 <p>
-P.S. host:/xxx, docker:/myfolder<br><br>
+P.S. host:$(pwd), docker:/source<br><br>
 
 DeSmuME<br>
 <img src="cpp_setup/1.jpg" class="maxSize">
