--- a/emu.htm
+++ b/emu.htm
@@ -443,6 +443,10 @@ build general-tools</a><br>
   &emsp;&emsp;&lowast;
   <a href="emu/ndsl/cpp_setup.htm">
   開發環境</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/ndsl/cpp_hello.htm">
+  hello, world!</a><br>
 <br><br><br><br>
 
 <div id="3ds"></div>
@@ -456,6 +460,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_setup.htm">
   開發環境</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_hello.htm">
+  hello, world!</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
