Game Boy Advance How to prepare developing environment.

--- a/emu.htm
+++ b/emu.htm
@@ -382,6 +382,13 @@ LCD</a><br>
   &emsp;&emsp;&lowast;
   <a href="emu/gba/asm_bg5.htm">
   BG Mode 5(bitmap)</a><br>
+
+&oplus;
+<b>C/C++</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="emu/gba/cpp_setup.htm">
+  開發環境</a><br>
 <br><br><br><br>
 
 <div id="ndsl"></div>
