Game Boy Advance 'hello, world!' example in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -389,6 +389,10 @@ LCD</a><br>
   &emsp;&emsp;&lowast;
   <a href="emu/gba/cpp_setup.htm">
   開發環境</a><br>
+  &emsp;&emsp;&lowast;
+
+  <a href="emu/gba/cpp_hello.htm">
+  hello, world!</a><br>
 <br><br><br><br>
 
 <div id="ndsl"></div>
