LeetCode Renamed title.

--- a/program.htm
+++ b/program.htm
@@ -1828,8 +1828,8 @@ LeetCode</h3>
   148. Sort List</a><br>
   
   &emsp;&emsp;&lowast;
-  <a href="program/leetcode/rust_sort_an_array.htm">
-  Sort an Array</a><br>
+  <a href="program/leetcode/rust_912.htm">
+  912. Sort an Array</a><br>
 <br><br><br><br>
 
 </p>
