--- a/program/leetcode/rust_912.htm
+++ b/program/leetcode/rust_912.htm
@@ -45,14 +45,14 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>LeetCode &gt;&gt; Rust</h3>
-<p><b>Sort an Array</b></p>
+<p><b>912. Sort an Array</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
 1. <a href="https://leetcode.com/">leetcode</a><br><br>
 
 題目：<br>
-<img src="rust_sort_an_array/1.jpg" class="maxSize"><br><br>
+<img src="rust_912/1.jpg" class="maxSize"><br><br>
 
 答案：
 </p>
