LeetCode Added more information.

--- a/program/leetcode/c_note.htm
+++ b/program/leetcode/c_note.htm
@@ -57,8 +57,8 @@
 寫完後：
 </p>
 <pre class="brush:cpp">
-int idx=0;
-char *p=NULL;
+int idx = 0;
+char *p = NULL;
 
 void push(char ch)
 {
@@ -75,16 +75,16 @@ void pop(void)
 
 char* removeStars(char *s)
 {
-    int c0=0;
-    int len=strlen(s);
+    int c0 = 0;
+    int len = strlen(s);
 
     p = malloc(len + 1);
     memset(p, 0, len + 1);
-    for(c0=0; c0&lt;len; c0++){
-        if(s[c0] != '*'){
+    for (c0 = 0; c0 &lt; len; c0++) {
+        if (s[c0] != '*') {
             push(s[c0]);
         }
-        else{
+        else {
             pop();
         }
     }
@@ -158,7 +158,7 @@ void push(char *p, int *idx, char ch)
 
 void pop(char *p, int *idx)
 {
-    if(*idx &gt; 0){
+    if (*idx &gt; 0) {
         (*idx)-= 1;
         p[*idx] = 0;
     }
@@ -166,22 +166,52 @@ void pop(char *p, int *idx)
 
 char* removeStars(char *s)
 {
-    int c0=0, idx=0;
-    int len=strlen(s);
-    char *p=malloc(len + 1);
+    int c0 = 0, idx = 0;
+    int len = strlen(s);
+    char *p = malloc(len + 1);
 
     memset(p, 0, len + 1);
-    for(c0=0; c0&lt;len; c0++){
-        if(s[c0] != '*'){
+    for (c0 = 0; c0 &lt; len; c0++) {
+        if (s[c0] != '*') {
             push(p, &amp;idx, s[c0]);
         }
-        else{
+        else {
             pop(p, &amp;idx);
         }
     }
     return p;
 }
 </pre><br>
+
+<p>
+另一個比較需要注意的事情，就是配置二維記憶體，如下範例(只列出部份程式碼)：
+</p>
+<pre class="brush:cpp">
+int** flipAndInvertImage(int **image, int imageSize, int *imageColSize, int *returnSize, int **returnColumnSizes)
+{
+    int **p = malloc(sizeof(int*) * imageSize);
+
+    // 回傳array大小
+    *returnSize = imageSize;
+
+    // 回傳每個array[]內的大小
+    *returnColumnSizes = malloc(sizeof(int) * imageSize);
+    for (c0 = 0; c0 &lt; imageSize; c0++) {
+        (*returnColumnSizes)[c0] = imageColSize[c0];
+    }
+
+    // 配置要回傳的記憶體
+    for (c0 = 0; c0 &lt; imageSize; c0++) {
+        p[c0] = malloc(sizeof(int) * imageColSize[c0]);
+    }
+    return p;
+}
+</pre>
+<p>
+L3：直接填寫(不用配置)<br>
+L9-L12：需要配置一維記憶體<br>
+L15-L17：需要配置二維記憶體
+</p>
 
 <p>
 <br><a href="../../program.htm">返回上一頁</a>
