Nintendo 3DS An example to show how to update the pixel in framebuffer in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -389,8 +389,8 @@ LCD</a><br>
   &emsp;&emsp;&lowast;
   <a href="emu/gba/cpp_setup.htm">
   開發環境</a><br>
-  &emsp;&emsp;&lowast;
 
+  &emsp;&emsp;&lowast;
   <a href="emu/gba/cpp_hello.htm">
   hello, world!</a><br>
 <br><br><br><br>
@@ -475,6 +475,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_hello.htm">
   hello, world!</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_pixels.htm">
+  Pixels Manipulation</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
