Nintendo 3DS Added more link flags.

--- a/emu/3ds/cpp_hello.htm
+++ b/emu/3ds/cpp_hello.htm
@@ -96,7 +96,7 @@ include $(DEVKITARM)/3ds_rules
 
 all:
     arm-none-eabi-gcc -mword-relocations -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/opt/devkitpro//libctru/include -D__3DS__ -c main.c -o main.o 
-    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/libctru/lib -lctru -lm -o main.elf
+    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/libctru/lib -lcitro2d -lcitro3d -lctru -lm -o main.elf
     smdhtool --create "main" "devkitARM" "steward" /opt/devkitpro/libctru/default_icon.png main.smdh
     3dsxtool main.elf main.3dsx --smdh=main.smdh
 
@@ -112,7 +112,7 @@ $ sudo docker run --rm -it -v $(pwd):/source nds-env /bin/bash
 
 root@c18881035cba:/source# make
     arm-none-eabi-gcc -mword-relocations -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/opt/devkitpro//libctru/include -D__3DS__ -c main.c -o main.o
-    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/libctru/lib -lctru -lm -o main.elf
+    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/libctru/lib -lcitro2d -lcitro3d -lctru -lm -o main.elf
     smdhtool --create "main" "devkitARM" "steward" /opt/devkitpro/libctru/default_icon.png main.smdh
     3dsxtool main.elf main.3dsx --smdh=main.smdh
 
