Nintendo 3DS An example to show how to do 2d drawing in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -479,6 +479,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_pixels.htm">
   Pixels Manipulation</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_2d.htm">
+  2D Drawing</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
