--- a/emu/3ds/cpp_2d.htm
+++ b/emu/3ds/cpp_2d.htm
@@ -46,7 +46,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo 3DS &gt;&gt; C/C++</h3>
-<p><b>Pixels Manipulation</b></p>
+<p><b>2D Drawing</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -57,40 +57,52 @@
 </p>
 <table>
 <tr><th>API</th><th>Description</th></tr>
-<tr><td>void gfxSetDoubleBuffering(gfxScreen_t screen, bool enable)</td><td>Enables or disables double buffering on a screen</td></tr>
-<tr><td>u8* gfxGetFramebuffer(gfxScreen_t screen, gfx3dSide_t side, u16 *width, u16 *height)</td><td>Retrieves the framebuffer of the specified screen to which graphics should be rendered</td></tr>
-<tr><td>void gfxFlushBuffers(void)</td><td>Flushes the data cache for the current framebuffers</td></tr>
+<tr><td>bool C3D_Init(size_t cmdBufSize)</td><td>Initialize citro3d</td></tr>
+<tr><td>bool C3D_FrameBegin(u8 flags)</td><td></td></tr>
+<tr><td>void C3D_FrameEnd(u8 flags)</td><td></td></tr>
+<tr><td>void C3D_Fini(void)</td><td></td></tr>
+<tr><td>bool C2D_Init(size_t maxObjects)</td><td>Initialize citro2d</td></tr>
+<tr><td>void C2D_Prepare(void)</td><td>Prepares the GPU for rendering 2D content</td></tr>
+<tr><td>C3D_RenderTarget* C2D_CreateScreenTarget(gfxScreen_t screen, gfx3dSide_t side)</td><td>Helper function to create a render target for a screen</td></tr>
+<tr><td>C2D_CONSTEXPR u32 C2D_Color32(u8 r, u8 g, u8 b, u8 a)</td><td>Builds a 32-bit RGBA color value</td></tr>
+<tr><td>void C2D_TargetClear(C3D_RenderTarget *target, u32 color)</td><td>Helper function to clear a rendertarget using the specified color</td></tr>
+<tr><td>void C2D_SceneBegin(C3D_RenderTarget *target)</td><td>Helper function to begin drawing a 2D scene on a render target</td></tr>
+<tr><td>bool C2D_DrawRectangle(float x, float y, float z, float w, float h, u32 clr0, u32 clr1, u32 clr2, u32 clr3)</td><td>Draws a plain rectangle using the GPU</td></tr>
+<tr><td>bool C2D_DrawCircleSolid(float x, float y, float z, float radius, u32 clr)</td><td>Draws a circle (an ellipse with identical width and height) using the GPU (with a solid color)</td></tr>
+<tr><td>void C2D_Fini (void)</td><td>Deinitialize citro2d</td></tr>
 </table><br>
 
 <p>
 main.c
 </p>
 <pre class="brush:cpp">
-#include &lt;3ds.h&gt;
-#include &lt;stdio.h&gt;
+#include &lt;citro2d.h&gt;
 #include &lt;string.h&gt;
+#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
 
 int main(void)
 {
-    u8 *fb = NULL;
-    int x = 0, y = 0;
-
     gfxInitDefault();
-    gfxSetDoubleBuffering(GFX_BOTTOM, false);
+    C3D_Init(C3D_DEFAULT_CMDBUF_SIZE);
+    C2D_Init(C2D_DEFAULT_MAX_OBJECTS);
+    C2D_Prepare();
+    C3D_RenderTarget* top = C2D_CreateScreenTarget(GFX_TOP, GFX_LEFT);
 
-    fb = gfxGetFramebuffer(GFX_BOTTOM, GFX_LEFT, NULL, NULL);
-    for (y = 0; y &lt; 240; y++) {
-        for (x = 0; x &lt; 320; x++) {
-            fb[0] = 0x00;
-            fb[1] = 0x00;
-            fb[2] = 0xff;
-            fb+= 3;
-        }
-    }
+    u32 bg = C2D_Color32(0x00, 0x00, 0xff, 0xff);
+    u32 c0 = C2D_Color32(0x00, 0xff, 0x00, 0xff);
+    u32 c1 = C2D_Color32(0xff, 0x00, 0x00, 0xff);
 
-    gfxFlushBuffers();
-    gfxSwapBuffers();
-    gspWaitForVBlank();
+    C3D_FrameBegin(C3D_FRAME_SYNCDRAW);
+    C2D_TargetClear(top, bg);
+    C2D_SceneBegin(top);
+    C2D_DrawRectangle(100, 100, 0, 50, 50, c0, c0, c0, c0);
+    C2D_DrawCircleSolid(200, 100, 0, 30, c1);
+    C3D_FrameEnd(0);
+    
+    C2D_Fini();
+    C3D_Fini();
+
     svcSleepThread(3000000000LL);
     gfxExit();
     return 0;
@@ -99,7 +111,7 @@ int main(void)
 
 <p>
 完成<br>
-<img src="cpp_pixels/1.jpg" class="maxSize">
+<img src="cpp_2d/1.jpg" class="maxSize">
 </p>
 
 <p>
