--- a/emu.htm
+++ b/emu.htm
@@ -478,7 +478,7 @@ Nintendo 3DS</h3>
   
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_pixels.htm">
-  Pixels Manipulation</a><br>
+  Pixels</a><br>
   
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_2d.htm">
