--- a/emu/3ds/cpp_pixels.htm
+++ b/emu/3ds/cpp_pixels.htm
@@ -46,7 +46,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo 3DS &gt;&gt; C/C++</h3>
-<p><b>Pixels Manipulation</b></p>
+<p><b>Pixels</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
