--- a/emu.htm
+++ b/emu.htm
@@ -483,6 +483,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_2d.htm">
   2D Drawing</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_input_pad.htm">
+  Input (Pad)</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
