--- a/emu.htm
+++ b/emu.htm
@@ -487,6 +487,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_input_pad.htm">
   Input (Pad)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_input_cpad.htm">
+  Input (CPad)</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
