--- a/emu.htm
+++ b/emu.htm
@@ -491,6 +491,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_input_cpad.htm">
   Input (CPad)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_lang.htm">
+  System Language</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
