--- a/emu.htm
+++ b/emu.htm
@@ -495,6 +495,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_lang.htm">
   System Language</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_kbd.htm">
+  Software Keyboard</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
