Nintendo 3DS An example to show how to list directory in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -499,6 +499,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_kbd.htm">
   Software Keyboard</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_dir.htm">
+  Directory</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
