--- a/emu.htm
+++ b/emu.htm
@@ -503,6 +503,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_dir.htm">
   Directory</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_thread.htm">
+  Thread</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
