Nintendo 3DS Dropped description.

--- a/emu/3ds/cpp_hello.htm
+++ b/emu/3ds/cpp_hello.htm
@@ -55,13 +55,13 @@
 說明：
 </p>
 <table>
-<tr><th>API</th><th>Description</th></tr>
-<tr><td>void gfxInitDefault(void)</td><td>Initializes the LCD framebuffers with default parameters</td></tr>
-<tr><td>PrintConsole* consoleInit(gfxScreen_t screen, PrintConsole *console)</td><td>Initialise the console</td></tr>
-<tr><td>void gspWaitForVBlank(void)</td><td>Waits for VBlank</td></tr>
-<tr><td>void gfxSwapBuffers(void)</td><td>Updates the configuration of both screens</td></tr>
-<tr><td>void svcSleepThread(s64 ns)</td><td>Puts the current thread to sleep</td></tr>
-<tr><td>void gfxExit(void)</td><td>Deinitializes and frees the LCD framebuffers</td></tr>
+<tr><th>API</th></tr>
+<tr><td>void gfxInitDefault(void)</td></tr>
+<tr><td>PrintConsole* consoleInit(gfxScreen_t screen, PrintConsole *console)</td></tr>
+<tr><td>void gspWaitForVBlank(void)</td></tr>
+<tr><td>void gfxSwapBuffers(void)</td></tr>
+<tr><td>void svcSleepThread(s64 ns)</td></tr>
+<tr><td>void gfxExit(void)</td></tr>
 </table><br>
 
 <p>
