--- a/emu/3ds/cpp_input_cpad.htm
+++ b/emu/3ds/cpp_input_cpad.htm
@@ -56,9 +56,9 @@
 說明：
 </p>
 <table>
-<tr><th>API</th><th>Description</th></tr>
-<tr><td>void hidCircleRead(circlePosition *pos)</td><td>Reads the current circle pad position</td></tr>
-<tr><td>void consoleClear(void)</td><td>Clears the screan by using iprintf("\x1b[2J");</td></tr>
+<tr><th>API</th></tr>
+<tr><td>void hidCircleRead(circlePosition *pos)</td></tr>
+<tr><td>void consoleClear(void)</td></tr>
 </table><br>
 
 <p>
