--- a/emu/3ds/cpp_input_pad.htm
+++ b/emu/3ds/cpp_input_pad.htm
@@ -56,10 +56,10 @@
 說明：
 </p>
 <table>
-<tr><th>API</th><th>Description</th></tr>
-<tr><td>bool aptMainLoop(void)</td><td>Main function which handles sleep mode and HOME/power buttons - call this at the beginning of every frame</td></tr>
-<tr><td>void hidScanInput(void)</td><td>Scans HID for input data</td></tr>
-<tr><td>u32 hidKeysDown(void)</td><td>Returns a bitmask of newly pressed buttons, this frame</td></tr>
+<tr><th>API</th></tr>
+<tr><td>bool aptMainLoop(void)</td></tr>
+<tr><td>void hidScanInput(void)</td></tr>
+<tr><td>u32 hidKeysDown(void)</td></tr>
 </table><br>
 
 <p>
