--- a/emu/3ds/cpp_kbd.htm
+++ b/emu/3ds/cpp_kbd.htm
@@ -56,13 +56,13 @@
 說明：
 </p>
 <table>
-<tr><th>API</th><th>Description</th></tr>
-<tr><td>void swkbdInit(SwkbdState *swkbd, SwkbdType type, int numButtons, int maxTextLength)</td><td>Initializes software keyboard status</td></tr>
-<tr><td>void swkbdSetInitialText(SwkbdState *swkbd, const char *text)</td><td>Sets the initial text that a software keyboard will display on launch</td></tr>
-<tr><td>void swkbdSetHintText(SwkbdState *swkbd, const char *text)</td><td>Sets the hint text of a software keyboard (that is, the help text that is displayed when the textbox is empty)</td></tr>
-<tr><td>void swkbdSetButton(SwkbdState *swkbd, SwkbdButton button, const char *text, bool submit)</td><td>Configures a dialog button in a software keyboard</td></tr>
-<tr><td>void swkbdSetFeatures(SwkbdState *swkbd, u32 features)</td><td>Specifies which special features are enabled in a software keyboard</td></tr>
-<tr><td>SwkbdButton swkbdInputText(SwkbdState *swkbd, char *buf, size_t bufsize)</td><td>Launches a software keyboard in order to input text</td></tr>
+<tr><th>API</th></tr>
+<tr><td>void swkbdInit(SwkbdState *swkbd, SwkbdType type, int numButtons, int maxTextLength)</td></tr>
+<tr><td>void swkbdSetInitialText(SwkbdState *swkbd, const char *text)</td></tr>
+<tr><td>void swkbdSetHintText(SwkbdState *swkbd, const char *text)</td></tr>
+<tr><td>void swkbdSetButton(SwkbdState *swkbd, SwkbdButton button, const char *text, bool submit)</td></tr>
+<tr><td>void swkbdSetFeatures(SwkbdState *swkbd, u32 features)</td></tr>
+<tr><td>SwkbdButton swkbdInputText(SwkbdState *swkbd, char *buf, size_t bufsize)</td></tr>
 </table><br>
 
 <p>
