--- a/emu/3ds/cpp_lang.htm
+++ b/emu/3ds/cpp_lang.htm
@@ -56,9 +56,9 @@
 說明：
 </p>
 <table>
-<tr><th>API</th><th>Description</th></tr>
-<tr><td>Result cfguInit(void)</td><td>Initializes CFGU</td></tr>
-<tr><td>Result CFGU_GetSystemLanguage(u8 *language)</td><td>Gets the system's language</td></tr>
+<tr><th>API</th></tr>
+<tr><td>Result cfguInit(void)</td></tr>
+<tr><td>Result CFGU_GetSystemLanguage(u8 *language)</td></tr>
 </table><br>
 
 <p>
