--- a/emu/3ds/cpp_pixels.htm
+++ b/emu/3ds/cpp_pixels.htm
@@ -56,10 +56,10 @@
 說明：
 </p>
 <table>
-<tr><th>API</th><th>Description</th></tr>
-<tr><td>void gfxSetDoubleBuffering(gfxScreen_t screen, bool enable)</td><td>Enables or disables double buffering on a screen</td></tr>
-<tr><td>u8* gfxGetFramebuffer(gfxScreen_t screen, gfx3dSide_t side, u16 *width, u16 *height)</td><td>Retrieves the framebuffer of the specified screen to which graphics should be rendered</td></tr>
-<tr><td>void gfxFlushBuffers(void)</td><td>Flushes the data cache for the current framebuffers</td></tr>
+<tr><th>API</th></tr>
+<tr><td>void gfxSetDoubleBuffering(gfxScreen_t screen, bool enable)</td></tr>
+<tr><td>u8* gfxGetFramebuffer(gfxScreen_t screen, gfx3dSide_t side, u16 *width, u16 *height)</td></tr>
+<tr><td>void gfxFlushBuffers(void)</td></tr>
 </table><br>
 
 <p>
