--- a/emu/3ds/cpp_thread.htm
+++ b/emu/3ds/cpp_thread.htm
@@ -56,14 +56,14 @@
 說明：
 </p>
 <table>
-<tr><th>API</th><th>Description</th></tr>
-<tr><td>Result svcWaitSynchronization(Handle handle, s64 nanoseconds)</td><td>Waits for synchronization on a handle</td></tr>
-<tr><td>Result svcClearEvent(Handle handle)</td><td>Clears an event</td></tr>
-<tr><td>Result svcCreateEvent(Handle *event, ResetType reset_type)</td><td>Creates an event handle</td></tr>
-<tr><td>Thread threadCreate(ThreadFunc entrypoint, void* arg, size_t stack_size, int prio, int core_id, bool detached)</td><td>Creates a new libctru thread</td></tr>
-<tr><td>Result svcSignalEvent(Handle handle)</td><td>Signals an event</td></tr>
-<tr><td>Result threadJoin(Thread thread, u64 timeout_ns)</td><td>Waits for a libctru thread to finish (or returns immediately if it is already finished)</td></tr>
-<tr><td>Result svcCloseHandle(Handle handle)</td><td>Closes a handle</td></tr>
+<tr><th>API</th></tr>
+<tr><td>Result svcWaitSynchronization(Handle handle, s64 nanoseconds)</td></tr>
+<tr><td>Result svcClearEvent(Handle handle)</td></tr>
+<tr><td>Result svcCreateEvent(Handle *event, ResetType reset_type)</td></tr>
+<tr><td>Thread threadCreate(ThreadFunc entrypoint, void* arg, size_t stack_size, int prio, int core_id, bool detached)</td></tr>
+<tr><td>Result svcSignalEvent(Handle handle)</td></tr>
+<tr><td>Result threadJoin(Thread thread, u64 timeout_ns)</td></tr>
+<tr><td>Result svcCloseHandle(Handle handle)</td></tr>
 </table><br>
 
 <p>
