--- a/emu/3ds/cpp_2d.htm
+++ b/emu/3ds/cpp_2d.htm
@@ -56,20 +56,20 @@
 說明：
 </p>
 <table>
-<tr><th>API</th><th>Description</th></tr>
-<tr><td>bool C3D_Init(size_t cmdBufSize)</td><td>Initialize citro3d</td></tr>
-<tr><td>bool C3D_FrameBegin(u8 flags)</td><td></td></tr>
-<tr><td>void C3D_FrameEnd(u8 flags)</td><td></td></tr>
-<tr><td>void C3D_Fini(void)</td><td></td></tr>
-<tr><td>bool C2D_Init(size_t maxObjects)</td><td>Initialize citro2d</td></tr>
-<tr><td>void C2D_Prepare(void)</td><td>Prepares the GPU for rendering 2D content</td></tr>
-<tr><td>C3D_RenderTarget* C2D_CreateScreenTarget(gfxScreen_t screen, gfx3dSide_t side)</td><td>Helper function to create a render target for a screen</td></tr>
-<tr><td>C2D_CONSTEXPR u32 C2D_Color32(u8 r, u8 g, u8 b, u8 a)</td><td>Builds a 32-bit RGBA color value</td></tr>
-<tr><td>void C2D_TargetClear(C3D_RenderTarget *target, u32 color)</td><td>Helper function to clear a rendertarget using the specified color</td></tr>
-<tr><td>void C2D_SceneBegin(C3D_RenderTarget *target)</td><td>Helper function to begin drawing a 2D scene on a render target</td></tr>
-<tr><td>bool C2D_DrawRectangle(float x, float y, float z, float w, float h, u32 clr0, u32 clr1, u32 clr2, u32 clr3)</td><td>Draws a plain rectangle using the GPU</td></tr>
-<tr><td>bool C2D_DrawCircleSolid(float x, float y, float z, float radius, u32 clr)</td><td>Draws a circle (an ellipse with identical width and height) using the GPU (with a solid color)</td></tr>
-<tr><td>void C2D_Fini (void)</td><td>Deinitialize citro2d</td></tr>
+<tr><th>API</th></tr>
+<tr><td>bool C3D_Init(size_t cmdBufSize)</td></tr>
+<tr><td>bool C3D_FrameBegin(u8 flags)</td></tr>
+<tr><td>void C3D_FrameEnd(u8 flags)</td></tr>
+<tr><td>void C3D_Fini(void)</td></tr>
+<tr><td>bool C2D_Init(size_t maxObjects)</td></tr>
+<tr><td>void C2D_Prepare(void)</td></tr>
+<tr><td>C3D_RenderTarget* C2D_CreateScreenTarget(gfxScreen_t screen, gfx3dSide_t side)</td></tr>
+<tr><td>C2D_CONSTEXPR u32 C2D_Color32(u8 r, u8 g, u8 b, u8 a)</td></tr>
+<tr><td>void C2D_TargetClear(C3D_RenderTarget *target, u32 color)</td></tr>
+<tr><td>void C2D_SceneBegin(C3D_RenderTarget *target)</td></tr>
+<tr><td>bool C2D_DrawRectangle(float x, float y, float z, float w, float h, u32 clr0, u32 clr1, u32 clr2, u32 clr3)</td></tr>
+<tr><td>bool C2D_DrawCircleSolid(float x, float y, float z, float radius, u32 clr)</td></tr>
+<tr><td>void C2D_Fini(void)</td></tr>
 </table><br>
 
 <p>
