--- a/emu.htm
+++ b/emu.htm
@@ -493,6 +493,10 @@ Nintendo 3DS</h3>
   Input (CPad)</a><br>
   
   &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_input_tp.htm">
+  Input (Touch)</a><br>
+  
+  &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_lang.htm">
   System Language</a><br>
   
