--- a/program/gnu/cpp_rapidjson.htm
+++ b/program/gnu/cpp_rapidjson.htm
@@ -65,6 +65,9 @@ using namespace rapidjson;
  
 int main(int argc, char **argv)
 {
+    const char *p0 = "0";
+    const char *p1 = "1";
+
     Document jsondoc;
     Value arr(kArrayType);
     Value tmp(kArrayType);
@@ -73,8 +76,10 @@ int main(int argc, char **argv)
     Pointer("/r0/s0").Set(obj, "1", jsondoc.GetAllocator());
     arr.PushBack(obj, jsondoc.GetAllocator());
     
-    tmp.PushBack("1", jsondoc.GetAllocator());
+    tmp.PushBack(StringRef(p0), jsondoc.GetAllocator());
+    tmp.PushBack(StringRef(p1), jsondoc.GetAllocator());
     tmp.PushBack("2", jsondoc.GetAllocator());
+    tmp.PushBack("3", jsondoc.GetAllocator());
     Pointer("/r1").Set(obj, tmp, jsondoc.GetAllocator());
     arr.PushBack(obj, jsondoc.GetAllocator());
 
@@ -107,21 +112,23 @@ $ sudo make install
 $ cd
 $ g++ main.cpp -o test
 $ ./test | jq
-{
-  "tags": [
     {
-      "r0": {
-        "s0": "1"
-      }
-    },
-    {
-      "r1": [
-        "1",
-        "2"
+      "tags": [
+        {
+          "r0": {
+            "s0": "1"
+          }
+        },
+        {
+          "r1": [
+            "0",
+            "1",
+            "2",
+            "3"
+          ]
+        }
       ]
     }
-  ]
-}
 </pre><br>
 
 <p>
