--- a/emu.htm
+++ b/emu.htm
@@ -465,6 +465,10 @@ build general-tools</a><br>
 Nintendo 3DS</h3>
 <hr size="1"><br><br><br><br><br>
 
+&lowast;
+<a href="emu/3ds/fix_crossbuild.htm">
+解決"gcc.cc: undefined reference to host_detect_local_cpu(int, char const**)"問題</a><br>
+
 &oplus;
 <b>C/C++</b><br>
 
