Nintendo 3DS An example to show how to get time from system in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -515,6 +515,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_thread.htm">
   Thread</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_time.htm">
+  Time</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
