Nintendo 3DS Typo.

--- a/emu/3ds/cpp_time.htm
+++ b/emu/3ds/cpp_time.htm
@@ -69,7 +69,7 @@ main.c
 #include &lt;time.h&gt;
 #include &lt;3ds.h&gt;
 
-int main(int argc, char **argv)
+int main(void)
 {
     time_t unixTime = time(NULL);
 
