--- a/emu.htm
+++ b/emu.htm
@@ -519,6 +519,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_time.htm">
   Time</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_streaming.htm">
+  Streaming</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
