--- a/emu.htm
+++ b/emu.htm
@@ -522,7 +522,7 @@ Nintendo 3DS</h3>
   
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_streaming.htm">
-  Streaming</a><br>
+  Audio (Streaming)</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
